--- a/src/app/index.css
+++ b/src/app/index.css
@@ -74,3 +74,9 @@
     @apply bg-background text-foreground h-screen overflow-hidden;
   }
 }
+
+.ellipsis-two-line {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
