--- a/src/app/index.css
+++ b/src/app/index.css
@@ -71,7 +71,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground h-screen overflow-hidden;
+    @apply bg-background text-foreground h-screen overflow-hidden max-sm:h-auto max-sm:overflow-auto;
   }
 }
 
